# clax

./: .flake8  README.md  pyproject.toml
clax/: __init__.py  clax.py  network.py
examples/: bayes_factors.py  c2st.py  minimal_classifier.py
tests/: test_class.py
